Finalizacion de la web KCS

--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -333,6 +333,10 @@ section .wrapper {
             video {
                 width: 100%;
             }
+
+            @include dt {
+                width: 370px;
+            }
         }
 
         .texto-articulo {
