Cambio de modal de imagen a video

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -375,7 +375,7 @@ html body .bigger {
 }
 
 /* line 66, SCSS/_main.scss */
-.bg-modal .modal figure {
+.bg-modal .modal figure, .bg-modal .modal .video-modal {
   width: 85%;
   margin: 0 auto;
   text-align: center;
@@ -384,6 +384,19 @@ html body .bigger {
 }
 
 /* line 74, SCSS/_main.scss */
+.bg-modal .modal .video-modal {
+  width: 95%;
+  transform: rotate(0deg);
+  margin-bottom: 4rem;
+}
+
+/* line 79, SCSS/_main.scss */
+.bg-modal .modal .video-modal video {
+  width: 100%;
+  display: block;
+}
+
+/* line 85, SCSS/_main.scss */
 .bg-modal .modal p {
   color: #fff;
   position: relative;
@@ -416,46 +429,46 @@ html body .bigger {
   }
 }
 
-/* line 109, SCSS/_main.scss */
+/* line 120, SCSS/_main.scss */
 .bg-modal .bajan {
   animation: dearriba 1s;
 }
 
-/* line 113, SCSS/_main.scss */
+/* line 124, SCSS/_main.scss */
 .bg-modal .suben {
   animation: deabajo 1s;
 }
 
-/* line 119, SCSS/_main.scss */
+/* line 130, SCSS/_main.scss */
 .titulo-home {
   display: none;
 }
 
-/* line 124, SCSS/_main.scss */
+/* line 135, SCSS/_main.scss */
 section .wrapper p, section .wrapper li {
   text-align: justify;
 }
 
-/* line 129, SCSS/_main.scss */
+/* line 140, SCSS/_main.scss */
 .seccion {
   padding: 4rem 0;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 129, SCSS/_main.scss */
+  /* line 140, SCSS/_main.scss */
   .seccion {
     padding: 6rem 0;
   }
 }
 
-/* line 137, SCSS/_main.scss */
+/* line 148, SCSS/_main.scss */
 .seccion .wrapper .titulo {
   width: 100%;
   text-align: center;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 143, SCSS/_main.scss */
+  /* line 154, SCSS/_main.scss */
   .seccion .benefits {
     display: flex;
     flex-flow: wrap;
@@ -463,20 +476,20 @@ section .wrapper p, section .wrapper li {
   }
 }
 
-/* line 152, SCSS/_main.scss */
+/* line 163, SCSS/_main.scss */
 .seccion .benefit:not(:last-child) {
   margin-bottom: 4rem;
 }
 
 @media only screen and (min-width: 481px) {
-  /* line 152, SCSS/_main.scss */
+  /* line 163, SCSS/_main.scss */
   .seccion .benefit:not(:last-child) {
     margin-bottom: 0;
   }
 }
 
 @media only screen and (min-width: 481px) {
-  /* line 151, SCSS/_main.scss */
+  /* line 162, SCSS/_main.scss */
   .seccion .benefit {
     display: flex;
     justify-content: space-between;
@@ -486,19 +499,19 @@ section .wrapper p, section .wrapper li {
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 151, SCSS/_main.scss */
+  /* line 162, SCSS/_main.scss */
   .seccion .benefit {
     width: calc(50% - 2rem);
   }
 }
 
-/* line 172, SCSS/_main.scss */
+/* line 183, SCSS/_main.scss */
 .seccion .img-benefit {
   margin-bottom: 2rem;
 }
 
 @media only screen and (min-width: 481px) {
-  /* line 172, SCSS/_main.scss */
+  /* line 183, SCSS/_main.scss */
   .seccion .img-benefit {
     margin-bottom: 0;
     width: calc(50% - 1rem);
@@ -506,23 +519,23 @@ section .wrapper p, section .wrapper li {
 }
 
 @media only screen and (min-width: 481px) {
-  /* line 181, SCSS/_main.scss */
+  /* line 192, SCSS/_main.scss */
   .seccion .texto-benefit {
     width: calc(50% - 1rem);
   }
 }
 
-/* line 186, SCSS/_main.scss */
+/* line 197, SCSS/_main.scss */
 .seccion .texto-benefit .subtitulo {
   font-size: 2rem;
 }
 
-/* line 190, SCSS/_main.scss */
+/* line 201, SCSS/_main.scss */
 .seccion .texto-benefit p {
   font-size: 1.5rem;
 }
 
-/* line 196, SCSS/_main.scss */
+/* line 207, SCSS/_main.scss */
 .seccion-home-hero,
 .seccion-inner-hero {
   margin-top: 39px;
@@ -533,14 +546,14 @@ section .wrapper p, section .wrapper li {
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 196, SCSS/_main.scss */
+  /* line 207, SCSS/_main.scss */
   .seccion-home-hero,
   .seccion-inner-hero {
     margin-top: 47px;
   }
 }
 
-/* line 208, SCSS/_main.scss */
+/* line 219, SCSS/_main.scss */
 .seccion-home-hero .contenedor-logos,
 .seccion-inner-hero .contenedor-logos {
   margin: 0 auto;
@@ -549,7 +562,7 @@ section .wrapper p, section .wrapper li {
   -moz-perspective: 700;
 }
 
-/* line 214, SCSS/_main.scss */
+/* line 225, SCSS/_main.scss */
 .seccion-home-hero .contenedor-logos .logo-card,
 .seccion-inner-hero .contenedor-logos .logo-card {
   width: 100%;
@@ -561,14 +574,14 @@ section .wrapper p, section .wrapper li {
   transform: rotateY(4140deg);
 }
 
-/* line 223, SCSS/_main.scss */
+/* line 234, SCSS/_main.scss */
 .seccion-home-hero .contenedor-logos .logo-card .frontal,
 .seccion-inner-hero .contenedor-logos .logo-card .frontal {
   opacity: 0;
   transition: all 0.6s ease;
 }
 
-/* line 228, SCSS/_main.scss */
+/* line 239, SCSS/_main.scss */
 .seccion-home-hero .contenedor-logos .logo-card .frontal, .seccion-home-hero .contenedor-logos .logo-card .posterior,
 .seccion-inner-hero .contenedor-logos .logo-card .frontal,
 .seccion-inner-hero .contenedor-logos .logo-card .posterior {
@@ -577,7 +590,7 @@ section .wrapper p, section .wrapper li {
   -moz-backface-visibility: hidden;
 }
 
-/* line 234, SCSS/_main.scss */
+/* line 245, SCSS/_main.scss */
 .seccion-home-hero .contenedor-logos .logo-card .posterior,
 .seccion-inner-hero .contenedor-logos .logo-card .posterior {
   position: absolute;
@@ -585,56 +598,56 @@ section .wrapper p, section .wrapper li {
   transform: rotateY(180deg);
 }
 
-/* line 241, SCSS/_main.scss */
+/* line 252, SCSS/_main.scss */
 .seccion-home-hero .contenedor-logos .logo-kcs,
 .seccion-inner-hero .contenedor-logos .logo-kcs {
   transform: rotateY(0deg) !important;
 }
 
-/* line 244, SCSS/_main.scss */
+/* line 255, SCSS/_main.scss */
 .seccion-home-hero .contenedor-logos .logo-kcs .frontal,
 .seccion-inner-hero .contenedor-logos .logo-kcs .frontal {
   opacity: 1;
 }
 
-/* line 248, SCSS/_main.scss */
+/* line 259, SCSS/_main.scss */
 .seccion-home-hero .contenedor-logos .logo-kcs .posterior,
 .seccion-inner-hero .contenedor-logos .logo-kcs .posterior {
   opacity: 0;
 }
 
-/* line 257, SCSS/_main.scss */
+/* line 268, SCSS/_main.scss */
 .seccion-home-hero .contenedor-logos {
   width: 180px;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 257, SCSS/_main.scss */
+  /* line 268, SCSS/_main.scss */
   .seccion-home-hero .contenedor-logos {
     width: 250px;
   }
 }
 
-/* line 266, SCSS/_main.scss */
+/* line 277, SCSS/_main.scss */
 .seccion-inner-hero {
   padding: 2rem 0 0;
 }
 
-/* line 269, SCSS/_main.scss */
+/* line 280, SCSS/_main.scss */
 .seccion-inner-hero .wrapper {
   width: 100%;
   position: relative;
 }
 
 @media only screen and (min-width: 481px) {
-  /* line 269, SCSS/_main.scss */
+  /* line 280, SCSS/_main.scss */
   .seccion-inner-hero .wrapper {
     max-width: 400px;
   }
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 269, SCSS/_main.scss */
+  /* line 280, SCSS/_main.scss */
   .seccion-inner-hero .wrapper {
     width: 83.3333333%;
     max-width: 1200px;
@@ -646,45 +659,45 @@ section .wrapper p, section .wrapper li {
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 266, SCSS/_main.scss */
+  /* line 277, SCSS/_main.scss */
   .seccion-inner-hero {
     padding-top: 0;
   }
 }
 
-/* line 291, SCSS/_main.scss */
+/* line 302, SCSS/_main.scss */
 .seccion-inner-hero .contenedor-logos {
   width: 75px;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 291, SCSS/_main.scss */
+  /* line 302, SCSS/_main.scss */
   .seccion-inner-hero .contenedor-logos {
     width: 150px;
   }
 }
 
-/* line 299, SCSS/_main.scss */
+/* line 310, SCSS/_main.scss */
 .seccion-inner-hero .titulo {
   margin: 2rem 0;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 299, SCSS/_main.scss */
+  /* line 310, SCSS/_main.scss */
   .seccion-inner-hero .titulo {
     width: calc(100% - 430px) !important;
   }
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 307, SCSS/_main.scss */
+  /* line 318, SCSS/_main.scss */
   .seccion-inner-hero .hero-pic {
     width: 280px;
   }
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 315, SCSS/_main.scss */
+  /* line 326, SCSS/_main.scss */
   .seccion-partida .wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -693,45 +706,45 @@ section .wrapper p, section .wrapper li {
   }
 }
 
-/* line 323, SCSS/_main.scss */
+/* line 334, SCSS/_main.scss */
 .seccion-partida .wrapper .img-articulo, .seccion-partida .wrapper .vid-articulo {
   margin-bottom: 2rem;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 323, SCSS/_main.scss */
+  /* line 334, SCSS/_main.scss */
   .seccion-partida .wrapper .img-articulo, .seccion-partida .wrapper .vid-articulo {
     margin-bottom: 0;
     width: 500px;
   }
 }
 
-/* line 333, SCSS/_main.scss */
+/* line 344, SCSS/_main.scss */
 .seccion-partida .wrapper .vid-articulo video {
   width: 100%;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 332, SCSS/_main.scss */
+  /* line 343, SCSS/_main.scss */
   .seccion-partida .wrapper .vid-articulo {
     width: 370px;
   }
 }
 
-/* line 342, SCSS/_main.scss */
+/* line 353, SCSS/_main.scss */
 .seccion-partida .wrapper .texto-articulo {
   text-align: center;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 342, SCSS/_main.scss */
+  /* line 353, SCSS/_main.scss */
   .seccion-partida .wrapper .texto-articulo {
     text-align: left;
     width: calc((100% - 500px) - 3rem);
   }
 }
 
-/* line 349, SCSS/_main.scss */
+/* line 360, SCSS/_main.scss */
 .seccion-partida .wrapper .texto-articulo .cta {
   background-color: #005b81;
   color: #d8e8ef;
@@ -747,12 +760,12 @@ section .wrapper p, section .wrapper li {
   background-color: #00374e;
 }
 
-/* line 363, SCSS/_main.scss */
+/* line 374, SCSS/_main.scss */
 .seccion-principios .principio:not(:last-child), #propuesta-laboral .principio:not(:last-child), .partida-abierta .principio:not(:last-child) {
   margin-bottom: 4rem;
 }
 
-/* line 367, SCSS/_main.scss */
+/* line 378, SCSS/_main.scss */
 .seccion-principios .icono-principios, #propuesta-laboral .icono-principios, .partida-abierta .icono-principios {
   background-color: #005b81;
   color: #fff;
@@ -763,37 +776,37 @@ section .wrapper p, section .wrapper li {
   border-radius: 50%;
 }
 
-/* line 376, SCSS/_main.scss */
+/* line 387, SCSS/_main.scss */
 .seccion-principios .icono-principios .fas, .seccion-principios .icono-principios .fab, .seccion-principios .icono-principios .fa, #propuesta-laboral .icono-principios .fas, #propuesta-laboral .icono-principios .fab, #propuesta-laboral .icono-principios .fa, .partida-abierta .icono-principios .fas, .partida-abierta .icono-principios .fab, .partida-abierta .icono-principios .fa {
   font-size: 3rem;
   line-height: 6rem;
 }
 
-/* line 382, SCSS/_main.scss */
+/* line 393, SCSS/_main.scss */
 .seccion-principios .subtitulo, #propuesta-laboral .subtitulo, .partida-abierta .subtitulo {
   text-align: center;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 387, SCSS/_main.scss */
+  /* line 398, SCSS/_main.scss */
   .seccion-principios .wrapper .alfinal, #propuesta-laboral .wrapper .alfinal, .partida-abierta .wrapper .alfinal {
     order: 3;
   }
 }
 
-/* line 393, SCSS/_main.scss */
+/* line 404, SCSS/_main.scss */
 .seccion-principios .wrapper .texto-articulo, #propuesta-laboral .wrapper .texto-articulo, .partida-abierta .wrapper .texto-articulo {
   text-align: left;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 393, SCSS/_main.scss */
+  /* line 404, SCSS/_main.scss */
   .seccion-principios .wrapper .texto-articulo, #propuesta-laboral .wrapper .texto-articulo, .partida-abierta .wrapper .texto-articulo {
     width: calc((100% - 500px) - 12rem);
   }
 }
 
-/* line 399, SCSS/_main.scss */
+/* line 410, SCSS/_main.scss */
 .seccion-principios .wrapper .texto-articulo .cta, #propuesta-laboral .wrapper .texto-articulo .cta, .partida-abierta .wrapper .texto-articulo .cta {
   background-color: #005b81;
   color: #d8e8ef;
@@ -809,23 +822,23 @@ section .wrapper p, section .wrapper li {
   background-color: #00374e;
 }
 
-/* line 404, SCSS/_main.scss */
+/* line 415, SCSS/_main.scss */
 .seccion-principios .wrapper .texto-articulo .lista-articulo li, #propuesta-laboral .wrapper .texto-articulo .lista-articulo li, .partida-abierta .wrapper .texto-articulo .lista-articulo li {
   list-style: square;
   margin-left: 1.8rem;
 }
 
-/* line 408, SCSS/_main.scss */
+/* line 419, SCSS/_main.scss */
 .seccion-principios .wrapper .texto-articulo .lista-articulo li:not(:last-child), #propuesta-laboral .wrapper .texto-articulo .lista-articulo li:not(:last-child), .partida-abierta .wrapper .texto-articulo .lista-articulo li:not(:last-child) {
   margin-bottom: 2rem;
 }
 
-/* line 418, SCSS/_main.scss */
+/* line 429, SCSS/_main.scss */
 .partida-abierta .subtitulo {
   text-align: left;
 }
 
-/* line 425, SCSS/_main.scss */
+/* line 436, SCSS/_main.scss */
 #propuesta-laboral form input, #propuesta-laboral form select, .seccion-contacto form input, .seccion-contacto form select {
   font-size: 1.6rem;
   padding: 5px;
@@ -833,20 +846,20 @@ section .wrapper p, section .wrapper li {
   width: 100%;
 }
 
-/* line 431, SCSS/_main.scss */
+/* line 442, SCSS/_main.scss */
 #propuesta-laboral form input:not(:last-child), #propuesta-laboral form select:not(:last-child), .seccion-contacto form input:not(:last-child), .seccion-contacto form select:not(:last-child) {
   margin-bottom: 2rem;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 437, SCSS/_main.scss */
+  /* line 448, SCSS/_main.scss */
   #propuesta-laboral form .boton .cta, .seccion-contacto form .boton .cta {
     width: 120px;
   }
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 447, SCSS/_main.scss */
+  /* line 458, SCSS/_main.scss */
   .seccion-contacto form {
     display: flex;
     justify-content: space-between;
@@ -854,7 +867,7 @@ section .wrapper p, section .wrapper li {
   }
 }
 
-/* line 455, SCSS/_main.scss */
+/* line 466, SCSS/_main.scss */
 .seccion-contacto textarea {
   width: 100%;
   border: none;
@@ -866,7 +879,7 @@ section .wrapper p, section .wrapper li {
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 455, SCSS/_main.scss */
+  /* line 466, SCSS/_main.scss */
   .seccion-contacto textarea {
     height: auto;
     margin-top: 0;
@@ -874,19 +887,19 @@ section .wrapper p, section .wrapper li {
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 470, SCSS/_main.scss */
+  /* line 481, SCSS/_main.scss */
   .seccion-contacto .inputs, .seccion-contacto textarea {
     width: calc(50% - 2rem);
   }
 }
 
-/* line 476, SCSS/_main.scss */
+/* line 487, SCSS/_main.scss */
 .seccion-contacto .boton {
   width: 100%;
   margin-top: 2rem;
 }
 
-/* line 480, SCSS/_main.scss */
+/* line 491, SCSS/_main.scss */
 .seccion-contacto .boton .cta {
   background-color: #005b81;
   color: #d8e8ef;
@@ -902,24 +915,24 @@ section .wrapper p, section .wrapper li {
   background-color: #00374e;
 }
 
-/* line 486, SCSS/_main.scss */
+/* line 497, SCSS/_main.scss */
 .seccion-ubicanos {
   padding-bottom: 0;
 }
 
-/* line 489, SCSS/_main.scss */
+/* line 500, SCSS/_main.scss */
 .seccion-ubicanos iframe {
   width: 100%;
 }
 
-/* line 494, SCSS/_main.scss */
+/* line 505, SCSS/_main.scss */
 .seccion-cards {
   padding: 0;
   display: flex;
   flex-wrap: wrap;
 }
 
-/* line 499, SCSS/_main.scss */
+/* line 510, SCSS/_main.scss */
 .seccion-cards .card-container {
   width: 50%;
   perspective: 700;
@@ -928,25 +941,25 @@ section .wrapper p, section .wrapper li {
 }
 
 @media only screen and (min-width: 481px) {
-  /* line 499, SCSS/_main.scss */
+  /* line 510, SCSS/_main.scss */
   .seccion-cards .card-container {
     width: 33.3333333%;
   }
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 499, SCSS/_main.scss */
+  /* line 510, SCSS/_main.scss */
   .seccion-cards .card-container {
     width: 16.666666666%;
   }
 }
 
-/* line 513, SCSS/_main.scss */
+/* line 524, SCSS/_main.scss */
 .seccion-cards .card-container:hover .card {
   transform: rotateY(180deg);
 }
 
-/* line 517, SCSS/_main.scss */
+/* line 528, SCSS/_main.scss */
 .seccion-cards .card-container .card {
   width: 100%;
   position: relative;
@@ -956,14 +969,14 @@ section .wrapper p, section .wrapper li {
   transition: all 0.3s ease;
 }
 
-/* line 525, SCSS/_main.scss */
+/* line 536, SCSS/_main.scss */
 .seccion-cards .card-container .card .frontal, .seccion-cards .card-container .card .posterior {
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
 }
 
-/* line 531, SCSS/_main.scss */
+/* line 542, SCSS/_main.scss */
 .seccion-cards .card-container .card .posterior {
   position: absolute;
   top: 0;
@@ -978,20 +991,20 @@ section .wrapper p, section .wrapper li {
   transform: rotateY(180deg);
 }
 
-/* line 544, SCSS/_main.scss */
+/* line 555, SCSS/_main.scss */
 .seccion-cards .card-container .card .posterior h3 {
   font-size: 1.9rem;
   color: #d8e8ef;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 544, SCSS/_main.scss */
+  /* line 555, SCSS/_main.scss */
   .seccion-cards .card-container .card .posterior h3 {
     font-size: 2.2rem;
   }
 }
 
-/* line 553, SCSS/_main.scss */
+/* line 564, SCSS/_main.scss */
 .seccion-cards .card-container .card .posterior .cta {
   margin-top: 2rem;
   width: 110px;
@@ -1009,14 +1022,14 @@ section .wrapper p, section .wrapper li {
   background-color: #6ca8c2;
 }
 
-/* line 564, SCSS/_main.scss */
+/* line 575, SCSS/_main.scss */
 .seccion-videoinfo .videoinfo {
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
 }
 
-/* line 569, SCSS/_main.scss */
+/* line 580, SCSS/_main.scss */
 .seccion-videoinfo .videoinfo iframe {
   width: 100%;
   display: block;
@@ -1024,20 +1037,20 @@ section .wrapper p, section .wrapper li {
 }
 
 @media only screen and (min-width: 481px) {
-  /* line 569, SCSS/_main.scss */
+  /* line 580, SCSS/_main.scss */
   .seccion-videoinfo .videoinfo iframe {
     height: 320px;
   }
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 569, SCSS/_main.scss */
+  /* line 580, SCSS/_main.scss */
   .seccion-videoinfo .videoinfo iframe {
     height: 500px;
   }
 }
 
-/* line 586, SCSS/_main.scss */
+/* line 597, SCSS/_main.scss */
 .seccion-companies .companies {
   width: 100%;
   display: flex;
@@ -1047,27 +1060,27 @@ section .wrapper p, section .wrapper li {
   margin-top: 2rem;
 }
 
-/* line 594, SCSS/_main.scss */
+/* line 605, SCSS/_main.scss */
 .seccion-companies .companies .companie {
   width: 40%;
   margin: 1rem;
 }
 
 @media only screen and (min-width: 481px) {
-  /* line 594, SCSS/_main.scss */
+  /* line 605, SCSS/_main.scss */
   .seccion-companies .companies .companie {
     width: 30%;
   }
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 594, SCSS/_main.scss */
+  /* line 605, SCSS/_main.scss */
   .seccion-companies .companies .companie {
     width: 15%;
   }
 }
 
-/* line 609, SCSS/_main.scss */
+/* line 620, SCSS/_main.scss */
 .galeria {
   display: flex;
   flex-wrap: wrap;
@@ -1075,13 +1088,13 @@ section .wrapper p, section .wrapper li {
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 609, SCSS/_main.scss */
+  /* line 620, SCSS/_main.scss */
   .galeria {
     align-items: center;
   }
 }
 
-/* line 618, SCSS/_main.scss */
+/* line 629, SCSS/_main.scss */
 .galeria .foto-galeria {
   max-width: 300px;
   width: calc(50% - 2rem/2);
@@ -1089,14 +1102,14 @@ section .wrapper p, section .wrapper li {
 }
 
 @media only screen and (min-width: 481px) {
-  /* line 618, SCSS/_main.scss */
+  /* line 629, SCSS/_main.scss */
   .galeria .foto-galeria {
     margin: 2rem 0;
   }
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 618, SCSS/_main.scss */
+  /* line 629, SCSS/_main.scss */
   .galeria .foto-galeria {
     width: calc(25% - 2rem*2);
   }
