--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -63,12 +63,23 @@
             width: 600px;
         }
 
-        figure {
+        figure, .video-modal {
             width: 85%;
             margin: 0 auto;
             text-align: center;
             transform: rotate(-5deg);
             box-shadow: 0 0 10px 1px #000;
+        }
+
+        .video-modal {
+            width: 95%;
+            transform: rotate(0deg);
+            margin-bottom: $margen*2;
+
+            video {
+                width: 100%;
+                display: block;
+            }
         }
 
         p {
