--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -39,6 +39,7 @@
             text-align: center;
             cursor: pointer;
             box-shadow: 0 0 10px -2px #000;
+            z-index: 601;
 
             .fas {
                 color: #fff;
