--- a/SCSS/_globales.scss
+++ b/SCSS/_globales.scss
@@ -45,6 +45,10 @@ html {
             margin-bottom: 1rem;
         }
 
+        strong {
+            font-weight: inherit;
+        }
+
         .bold {
             font-family: $font-bd;
         }
@@ -89,6 +93,42 @@ html {
 
         .bigger {
             animation: heartbeat 0.5s infinite;
+        }
+
+        .alert {
+            width: 100%;
+            padding: $margen;
+            border-right: 2px;
+            margin-top: $margen/2;
+            font-style: italic;
+        
+            p, li {
+                color: #fff;
+                font-size: 1.3em;
+            }
+        
+            li {
+                list-style: square;
+                margin-left: 1.2em;
+        
+                &:not(:last-child) {
+                    margin-bottom: 1.2rem;
+                }
+            }
+        }
+        
+        .error {
+            background: #a94242;
+            border: 1px solid #a94242;
+        }
+        
+        .success {
+            background: #4caf50;
+            border: 1px solid #4caf50;
+        
+            p {
+                text-align: center;
+            }
         }
     }
 }
